Fix alignment of login box

--- a/public/style.css
+++ b/public/style.css
@@ -218,7 +218,7 @@ a:hover {
     top: 50%;
     left: 50%;
     margin-top: -115px;
-    margin-left: -123px;
+    margin-left: -133px;
     text-align: center;
     color:white;
     text-align:right;
